2-UserVisible/UserVisibleDeployNSG.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                 "description": ""
             }
         },
         "MissionvNetName": {
             "type": "string",
             "defaultValue": "MissionvNet",
             "metadata": {
                 "description": "Name for Mission vNet"
             }
         },
         "UserVisibleResourceGroupName": {
            "type": "string",
            "metadata": {
                "description": ""
            }
        },
        "MissionInstanceResourceGroupName": {
            "type": "string",
            "metadata": {
                "description": ""
            }
        },
         "retentionPolicy": {
            "type": "int",
            "metadata": {
                 "description": ""
             }
         },
         "storageAccountName": {
            "type": "string",
            "metadata": {
                 "description": ""
             }
         },
         "WorkspaceName": {
            "type": "string",
            "metadata": {
                 "description": ""
             }
         }
    },
    "variables": {
        "MissionvNetName": {
            "addressSpacePrefix": "10.0.0.0/16",
            "MissionsubnetName": "MissionSubnet",
            "MissionsubnetPrefix": "10.0.1.0/24",
            "MissionnsgName": "Missionnsg",
            "UsersubnetName": "UserSubnet",
            "UsersubnetPrefix": "10.0.2.0/24",
            "UsernsgName": "Usernsg"
        }
    },
    "resources": [
        {
            "apiVersion": "2017-06-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('MissionvNetName').UsernsgName]",
            "location": "[resourceGroup().location]",
            "dependsOn": [ ],
            "properties": {
                "securityRules": [
                    {
                        "name": "rdp_rule",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow_Internet",
                        "properties": {
                            "description": "Allow Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "azurestorageout",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "443",
                                "80"
                            ]
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings",
            "apiVersion": "2017-05-01-preview",
            "name": "[concat(variables('MissionvNetName').UsernsgName, '/', 'Microsoft.Insights/setForSecurity')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('MissionvNetName').UsernsgName)]"
            ],
            "properties": {
                "workspaceId": "[resourceId(parameters('UserVisibleResourceGroupName'),'Microsoft.OperationalInsights/workspaces',parameters('WorkspaceName'))]",
                "storageAccountId": "[resourceId(parameters('UserVisibleResourceGroupName'),'Microsoft.Storage/storageAccounts', parameters('storageAccountName'))]",
                "logs": [
                    {
                        "category": "NetworkSecurityGroupEvent",
                        "enabled": true,
                        "retentionPolicy": {
                            "days": "[parameters('retentionPolicy')]",
                            "enabled": true
                        }
                    },
                    {
                        "category": "NetworkSecurityGroupRuleCounter",
                        "enabled": true,
                        "retentionPolicy": {
                            "days": "[parameters('retentionPolicy')]",
                            "enabled": true
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
